Show up patients list in component

--- a/src/app/patient-item/patient-item.component.html
+++ b/src/app/patient-item/patient-item.component.html
@@ -1,9 +1,9 @@
 <li class="list-group-item">
-	<h4>Last Name : {{patient.patientLastName}}</h4>
-	<h4>First Name : {{patient.patientFirstName</h4>
-	<h4>Birth Date : {{patient.patientbirthDate}}</h4>
-	<h4>Sex : {{patient.petientSex}}</h4>
-	<h4>Address : {{patient.patientAddress}}</h4>
-	<h4>Phone Number : {{patient.patientPhoneNumber}}</h4>
-	<h4>Email : {{patient.patientEmail}}</h4>
+	<h6>Last Name : {{patient.patientLastName}}</h6>
+	<h6>First Name : {{patient.patientFirstName}}</h6>
+	<h6>Birth Date : {{patient.patientBirthDate}}</h6>
+	<h6>Sex : {{patient.patientGender}}</h6>
+	<h6>Address : {{patient.patientAddress}}</h6>
+	<h6>Phone Number : {{patient.patientPhoneNumber}}</h6>
+	<h6>Email : {{patient.patientEmail}}</h6>
 </li>
