--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<app-pagination-tool></app-pagination-tool>
+<nav class="navbar navbar-default">
+
+	<div class="container-fluid">
+		<a class="navbar-brand">
+			<img src="assets/images/Mediscreen-logo.png" width="40" height="40" alt="Logo Mediscreen">
+		</a>
+		<ul class="nav navbar-nav">
+			<li routerLinkActive="active"><a routerLink="patients-list">Patients</a></li>
+			<li routerLinkActive="active"><a routerLink="new-patient">Nouveau Patient</a></li>
+		</ul>
+	</div>
+	<div class="navbar-right"></div>
+</nav>
+<div class="container">
+	<div class="row">
+		<router-outlet></router-outlet>
+	</div>
+</div>
