--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,1 +1,7 @@
-
+<div class="col-xs-12">
+	<h4>Patients Records</h4>
+	<ul class="list-group">
+		<app-patient-item *ngFor="let patient of patientsPage.content"
+			[patient]="patient">
+		</app-patient-item>
+	</ul>
