--- a/src/app/pagination-tool/pagination-tool.component.html
+++ b/src/app/pagination-tool/pagination-tool.component.html
@@ -1,6 +1,4 @@
-<div> <span class="align-self-center mb-1 mr-2 text-muted">
-		Shows {{page.numberOfElements}} of {{page.totalElements}}
-	</span>
+<div>
 	<a [routerLink]="" class="btn btn-outline" [ngClass]="{'disabled': page.first }" (click)="previousPage()">
 		Page précédente
 	</a>
