--- a/src/app/patient-item/patient-item.component.html
+++ b/src/app/patient-item/patient-item.component.html
@@ -2,7 +2,7 @@
 	<h6>Last Name : {{patient.patientLastName}}</h6>
 	<h6>First Name : {{patient.patientFirstName}}</h6>
 	<h6>Birth Date : {{patient.patientBirthDate}}</h6>
-	<h6>Sex : {{patient.patientGender}}</h6>
+	<h6>Gender : {{patient.patientGender}}</h6>
 	<h6>Address : {{patient.patientAddress}}</h6>
 	<h6>Phone Number : {{patient.patientPhoneNumber}}</h6>
 	<h6>Email : {{patient.patientEmail}}</h6>
