--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,13 @@
 			<li class="nav-item dropdown">
 				<a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Patients</a>
 				<ul class="dropdown-menu">
-					<li routerLinkActive="active"><a class="dropdown-item" routerLink="patients-list">Patients list</a></li>
+					<li routerLinkActive="active"><a class="dropdown-item" routerLink="patients">Patients Records</a></li>
 					<li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
 					<li><a class="dropdown-item" href="#"> Submenu item 3 </a></li>
 				</ul>
 			</li>
 		</ul>
 	</div>
-
 </nav>
 <div class="container">
 	<div class="row">
