--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,15 @@
-.navbar .nav-item:hover .dropdown-menu{ display: block;  }
-.navbar .nav-item .dropdown-menu{ margin-top:0; }
+.navbar .nav-item:hover .dropdown-menu { 
+	display: block;  
+}
+.navbar .nav-item .dropdown-menu { 
+	margin-top:0; 
+}
+
+.raw{
+	display:flex;
+}
+#bigLogo {
+	width: 500px;
+	display: flex;
+	margin: auto;
+}
