--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" routerLink="">
 			<img src="assets/images/Mediscreen-logo.png" width="40" height="40" alt="Logo Mediscreen">
 		</a>
 		<ul class="nav navbar-nav">
 			<li class="nav-item dropdown">
-				<a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Patients</a>
+				<a class="nav-link  dropdown-toggle" routerLink="" data-bs-toggle="dropdown">Patients Management</a>
 				<ul class="dropdown-menu">
 					<li routerLinkActive="active"><a class="dropdown-item" routerLink="patients">Patients Records</a></li>
-					<li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
-					<li><a class="dropdown-item" href="#"> Submenu item 3 </a></li>
+					<li routerLinkActive="active"><a class="dropdown-item" routerLink="new-patient">New Patient Record</a></li>
 				</ul>
 			</li>
 		</ul>
