Retrieve patient history ok

--- a/src/app/patient-item/patient-item.component.html
+++ b/src/app/patient-item/patient-item.component.html
@@ -1,5 +1,5 @@
 <li [ngClass]="{'list-group-item' : true}">
-	<h6>Last Name : {{patient.patientLastName}}</h6>
+	<label>Last Name : {{patient.patientLastName}}</label>
 	<h6>First Name : {{patient.patientFirstName}}</h6>
 	<h6>Birth Date : {{patient.patientBirthDate}}</h6>
 	<h6>Gender : {{patient.patientGender}}</h6>
