--- a/src/app/single-patient-view/single-patient-view.component.html
+++ b/src/app/single-patient-view/single-patient-view.component.html
@@ -1,18 +1,28 @@
+
+<a routerLink='/patients'>Retour à la liste</a>
+<h3>Patient Infos</h3>
 <div class="row" *ngIf="!isEditable">
 	<div class="col-sm-8 col-sm-offset-2">
-		<h3>Last Name : {{patient.patientLastName }}</h3>
-		<h3>First Name : {{patient.patientFirstName }}</h3>
-		<h3>Birth Date : {{patient.patientBirthDate }}</h3>
-		<h3>Gender : {{patient.patientGender }}</h3>
-		<h3>Address : {{patient.patientAddress }}</h3>
-		<h3>Phone Number : {{patient.patientPhoneNumber }}</h3>
-		<h3>Email : {{patient.patientEmail}}</h3>
+		<h5>Last Name : {{patient.patientLastName }}</h5>
+		<h5>First Name : {{patient.patientFirstName }}</h5>
+		<h5>Birth Date : {{patient.patientBirthDate }}</h5>
+		<h5>Gender : {{patient.patientGender }}</h5>
+		<h5>Address : {{patient.patientAddress }}</h5>
+		<h5>Phone Number : {{patient.patientPhoneNumber }}</h5>
+		<h5>Email : {{patient.patientEmail}}</h5>
 		<button class="btn btn-primary" [disabled]="isEditable" (click)="onEdit()">Edit</button>
 		<button class="btn btn-danger" [disabled]="isEditable">Delete</button>
 		<button *ngIf="isEditable" class="btn btn-success">Update</button>
-		<a routerLink='/patients'>Retour à la liste</a>
 	</div>
 </div>
+
+<h3>Patient History</h3>
+<div class="row">
+	<div class="col-sm-8 col-sm-offset-2">
+		<app-single-patient-history></app-single-patient-history>
+	</div>
+</div>
+
 
 <div class="row" *ngIf="isEditable">
 	<div class="col-sm-8 col-sm-offset-2">
